# ravenrag

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  PLAN.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  container.yml
LICENSES/: COMMERCIAL.txt
examples/: basic_usage.py
ravenrag/: __init__.py  cache.py  cli.py  config.py  context.py  embed.py  eval.py  export.py  fingerprint.py  graph.py  hybrid.py  index.py  loaders.py  mcp_server.py  pipeline.py  rerank.py  server.py  splitter.py  store.py  timing.py  watcher.py
ravenrag/stores/: __init__.py  faiss_store.py  sqlite_store.py
tests/: conftest.py  test_async.py  test_cache.py  test_cli.py  test_config.py  test_config_validation.py  test_context.py  test_embed.py  test_eval.py  test_export.py  test_faiss_store.py  test_fingerprint.py  test_graph.py  test_hybrid.py  test_index.py  test_loaders.py  test_loaders_builtin.py  test_mcp.py  test_multi_collection.py  test_pipeline.py  test_rerank.py  test_server.py  test_splitter.py  test_sqlite_store.py  test_store.py  test_timing.py  test_watcher.py
