[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ravenrag"
version = "0.3.0"
description = "Lightweight, local-first RAG for your documents"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Erling Kristiansen", email = "egkristi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
hybrid = ["rank-bm25>=0.2.2"]
watch = ["watchfiles>=0.20"]
all = ["rank-bm25>=0.2.2", "watchfiles>=0.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "rank-bm25>=0.2.2", "watchfiles>=0.20"]

[project.scripts]
raven = "ravenrag.cli:app"

[project.urls]
Homepage = "https://github.com/egkristi/ravenrag"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require real model loading (slow)",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]
