[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ravenrag"
version = "0.7.0"
description = "Lightweight, local-first RAG for your documents"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Erling Kristiansen", email = "egkristi@gmail.com"}
]
keywords = ["rag", "retrieval-augmented-generation", "embeddings", "vector-search", "chromadb", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
hybrid = ["rank-bm25>=0.2.2"]
watch = ["watchfiles>=0.20"]
tokens = ["transformers>=4.20.0"]
faiss = ["faiss-cpu>=1.7.0"]
loaders = ["pymupdf4llm>=0.0.10", "python-docx>=0.8.11", "beautifulsoup4>=4.12.0", "striprtf>=0.0.26", "python-pptx>=0.6.21", "openpyxl>=3.1.0"]
all = ["rank-bm25>=0.2.2", "watchfiles>=0.20", "transformers>=4.20.0", "faiss-cpu>=1.7.0", "pymupdf4llm>=0.0.10", "python-docx>=0.8.11", "beautifulsoup4>=4.12.0", "striprtf>=0.0.26", "python-pptx>=0.6.21", "openpyxl>=3.1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "rank-bm25>=0.2.2", "watchfiles>=0.20", "transformers>=4.20.0"]

[project.scripts]
raven = "ravenrag.cli:app"

[project.urls]
Homepage = "https://github.com/egkristi/ravenrag"
Repository = "https://github.com/egkristi/ravenrag"
Issues = "https://github.com/egkristi/ravenrag/issues"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require real model loading (slow)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]
